--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
-            <a href="./recipes/lasagna.html">Lasagna</a>
-        </li>
-        <li>
-            <a href="./recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a>
-        </li>
-        <li>
-            <a href="./recipes/hamburger.html">Hamburger</a>
-        </li>
-    </ul>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="card menu">
+        <ul>
+            <li>
+                <a href="./recipes/lasagna.html">Lasagna</a>
+            </li>
+            <li>
+                <a href="./recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a>
+            </li>
+            <li>
+                <a href="./recipes/hamburger.html">Hamburger</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
