--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -13,7 +13,7 @@
     <h1>Italian Chicken Marinade</h1>
     <img src="../img/italian-chicken-marinade.webp" alt="Picture of succulent grilled chicken" width="500">
     <h3>Description</h3>
-    <div class="card alternative">
+    <div class="card">
         <p>
             This Italian dressing chicken marinade is a super simple but delicious way to add flavor before grilling.
         </p>
