--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,7 @@
     <h1>Lasagna</h1>
     <img src="../img/Best-Lasagna-550-500x375.jpg" alt="Picture of a delicious lasagna" width="500">
     <h3>Description</h3>
-    <div class="card alternative ">
+    <div class="card">
         <p>
             Indulge in the irresistible layers of pasta, savory meats, tangy tomato sauce, and melted cheese that make
             lasagna the ultimate comfort food. A symphony of flavors baked to perfection, this Italian classic is a
