--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -13,7 +13,7 @@
     <h1>Hamburger</h1>
     <img src="../img/hamburger.webp" alt="Picture of a juicy hamburger" width="500">
     <h3>Description</h3>
-    <div class="card alternative">
+    <div class="card">
         <p>
             The best burger recipe for summertime grilling! This juicy burger is jam-packed with all kinds of stuff and
             has
